# ITEA

./: README.md
HW1/: main.cpp
HW10/client/: CMakeLists.txt  main.cpp
HW10/server/: CMakeLists.txt  main.cpp
HW2/: CMakeLists.txt  main.cpp
HW3/: CMakeLists.txt  main.cpp  mystring.cpp  mystring.h  mywstring.cpp  mywstring.h  symbolarray.cpp  symbolarray.h
HW4/: CMakeLists.txt  main.cpp
HW5/: CMakeLists.txt  SomeNews.txt  main.cpp
HW6/: CMakeLists.txt  main.cpp  test.txt
HW7/: functions.ITEA_cpp  functions.ITEA_cppA  functions.ITEA_h  functions.ITEA_hA  hw7.cpp  hw7.sln  hw7.vcxproj  hw7.vcxproj.filters  main.ITEA_cpp  main.ITEA_cppA  Збірка.txt
HW7/Debug/: hw7.ilk  hw7.obj.enc  vc142.idb
HW7/Debug/hw7.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  hw7.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
HW8/: CMakeLists.txt  main.cpp
HW9/: CMakeLists.txt  main.cpp
seabattle/sb_client/: CMakeLists.txt  connectioninfodialog.cpp  connectioninfodialog.h  connectioninfodialog.ui  controller.cpp  controller.h  def_con.h  field.cpp  field.h  images.cpp  images.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  res.qrc
seabattle/sb_server/: CMakeLists.txt  GameServer.cpp  GameServer.h  Player.cpp  Player.h  PlayerManager.cpp  PlayerManager.h  PlayerSession.cpp  PlayerSession.h  main.cpp
